[tool.poetry]
name = "radiologyproj"
version = "0.1.0"
description = ""
authors = ["AEJaspan <adam.jaspan@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
torch = "^2.5.1"
dlhpcstarter = "0.1.4"
pycocoevalcap = "1.2"
torchvision = "^0.20.1"
peft = "^0.14.0"
# transformers = "^4.48.1"
transformers = { path='wheels/transformers-4.49.0.dev0-py3-none-any.whl' }
pycocotools = "2.0.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
